tests/nad_test_3/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns2
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns1
