test_outputs/connlist/nad_test_3_connlist_output.txt
Permitted connectivity analyzed in Pod network:
0.0.0.0-255.255.255.255[External] => ns1/pod1[Pod] : All Connections
0.0.0.0-255.255.255.255[External] => ns1/pod2[Pod] : All Connections
0.0.0.0-255.255.255.255[External] => ns2/pod3[Pod] : All Connections
ns1/pod1[Pod] => 0.0.0.0-255.255.255.255[External] : All Connections
ns1/pod1[Pod] => ns1/pod2[Pod] : All Connections
ns1/pod1[Pod] => ns2/pod3[Pod] : All Connections
ns1/pod2[Pod] => 0.0.0.0-255.255.255.255[External] : All Connections
ns1/pod2[Pod] => ns1/pod1[Pod] : All Connections
ns1/pod2[Pod] => ns2/pod3[Pod] : All Connections
ns2/pod3[Pod] => 0.0.0.0-255.255.255.255[External] : All Connections
ns2/pod3[Pod] => ns1/pod1[Pod] : All Connections
ns2/pod3[Pod] => ns1/pod2[Pod] : All Connections

Permitted connectivity analyzed in secondary NAD l2-network:
ns2/pod3[Pod] => ns1/pod2[Pod] : TCP 80

Workload-to-Networks Mapping:
ns1/pod1[Pod]: pod_network
ns1/pod2[Pod]: pod_network,l2-network[NAD]
ns2/pod3[Pod]: pod_network,l2-network[NAD]
